looking-glass (0+b6~rc1-0utopia1) unstable; urgency=medium

  * New upstream release candidate.
  * Update d/control fields to point to Utopia Repository sources
  * Add looking-glass-host package for Linux host server
    - Add B-D: libspa-0.2-dev, libxcb-shm0-dev, libxcb-xfixes0-dev

 -- James Lu <james@overdrivenetworks.com>  Thu, 17 Nov 2022 22:55:09 -0800

looking-glass (0+b5.git408~e98913f1-0utopia1) unstable; urgency=medium

  * New upstream git snapshot.
    - Add support for routing audio via SPICE
  * Add B-D: libpipewire-0.3-dev, libpulse-dev, libsamplerate0-dev

 -- James Lu <james@overdrivenetworks.com>  Tue, 05 Jul 2022 11:50:57 -0700

looking-glass (0+b5.0.1-2) unstable; urgency=medium

  * Added new binary package obs-plugin-looking-glass
  * Fix broken build
    * Added xpresenter build dependency
  * Fixed file watch
    * Updated watch file

 -- Lennart Weller <lhw@ring0.de>  Sun, 20 Mar 2022 15:57:12 +0100

looking-glass (0+b5.0.1-1) unstable; urgency=medium

  * New upstream release

 -- Lennart Weller <lhw@ring0.de>  Thu, 17 Mar 2022 23:56:45 +0100

looking-glass (0+b4+dfsg.1-1) unstable; urgency=medium

  * New upstream release

 -- Lennart Weller <lhw@ring0.de>  Thu, 26 Aug 2021 22:01:34 +0200

looking-glass (0+b3+dfsg.1-1) unstable; urgency=medium

  * New upstream release

 -- Lennart Weller <lhw@ring0.de>  Sun, 28 Mar 2021 16:15:39 +0200

looking-glass (0+b1-5) unstable; urgency=low

  * Remove global qemu from enhances (Closes: #966260)
  * Specifically enhance qemu-system-x86
  * Make the dh linter happier

 -- Lennart Weller <lhw@ring0.de>  Sat, 25 Jul 2020 21:09:52 +0200

looking-glass (0+b1-4) unstable; urgency=low

  * Re-add upstream version to the version output

 -- Lennart Weller <lhw@ring0.de>  Wed, 29 Apr 2020 22:11:43 +0200

looking-glass (0+b1-3) unstable; urgency=medium

  * Remove backtrace support for now. Solving the binutils issue
  * Also remove potential bad optimizations
