@@ -6,8 +6,10 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 export DEB_CFLAGS_MAINT_APPEND = -O3 -madx -msse4.1
 export DPKG_EXPORT_BUILDFLAGS = 1
 
+KVMFR_PACKAGE_VERSION=$(shell grep PACKAGE_VERSION= module/dkms.conf | cut -d= -f2 | sed 's/"//g')
+
 include  /usr/share/dpkg/pkg-info.mk
-export DEB_VERSION
+export DEB_VERSION KVMFR_PACKAGE_VERSION
 
 %:
 	dh $@
@@ -31,3 +33,7 @@ override_dh_auto_clean:
 	dh_auto_clean --sourcedir client --builddirectory .build/client
 	dh_auto_clean --sourcedir obs --builddirectory .build/obs
 	dh_auto_clean --sourcedir host --builddirectory .build/host
+
+override_dh_gencontrol:
+	dh_gencontrol
+	dh_gencontrol -p looking-glass-kvmfr-dkms -- -v$(KVMFR_PACKAGE_VERSION)~$(DEB_VERSION)
